--- a/src/app/details/details.component.scss
+++ b/src/app/details/details.component.scss
@@ -10,7 +10,6 @@
 
 .custom-tab-group {
   height: 100%;
-  padding: 0 20px;
 }
 
 /* Tab Label Contents */
@@ -39,4 +38,8 @@
     text-align: center;
   }
 
+}
+
+::ng-deep .mat-mdc-tab-header {
+  padding: 0 20px;
 }
