--- a/src/app/details/tabs/description/description.component.scss
+++ b/src/app/details/tabs/description/description.component.scss
@@ -7,16 +7,18 @@ $small-breakpoint-width: 959px;
   align-items: flex-start;
   overflow-y: auto;
   height: 100%;
-  width: 100%;
   background: var(--surface);
   font-family: 'Roboto Flex', sans-serif;
+  gap: var(--gap);
+  padding-left: var(--gap);
+  align-content: space-between;
 
   --columns: 6;
   --gap: 20px;
   --half-gap: calc(var(--gap) / 2);
   --padding: 20px;
-  --column-width: max(100px, calc((var(--width) + var(--gap)) / var(--columns) - var(--gap)));
-  --icon-width: 182px;
+  --column-width: max(100px, calc((var(--width) - (var(--columns) + 1 ) * var(--gap)) / var(--columns)));
+  --icon-width: var(--column-width);
   --icon-height: 84px;
   --margin-right: 2px;
 
@@ -33,9 +35,8 @@ $small-breakpoint-width: 959px;
   flex-direction: column;
   align-items: flex-start;
   gap: var(--half-gap);
-  width: 85%;
+  width: calc((var(--columns) - 1) * var(--column-width) + (var(--columns) - 2) * var(--gap));
   height: 100%;
-  padding-right: var(--half-gap);
 
   @media (max-width: $small-breakpoint-width) {
     width: calc(100% - 2 * var(--padding));
@@ -113,7 +114,7 @@ $small-breakpoint-width: 959px;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  padding: 5px 0 5px var(--half-gap);
+  padding: 5px 0 5px 0;
   gap: 8px;
   width: var(--column-width);
   height: calc(100% - 10px);
