--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,6 +30,7 @@ body {
   height: 100%;
   overflow: hidden;
   background: var(--surface);
+  scrollbar-color: var(--primary) transparent;
 }
 
 a {
